# tierdb-duckdb

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: build.yml
src/: tierdb_extension.cpp
src/include/: tierdb_extension.hpp
src/include/storage/: tierdb_catalog.hpp  tierdb_delete.hpp  tierdb_insert.hpp  tierdb_json.hpp  tierdb_schema.hpp  tierdb_storage.hpp  tierdb_table.hpp  tierdb_transaction.hpp  tierdb_transaction_manager.hpp  tierdb_update.hpp
src/include/tierdb/: client.hpp  ffi.hpp
src/storage/: tierdb_catalog.cpp  tierdb_client.cpp  tierdb_delete.cpp  tierdb_insert.cpp  tierdb_json.cpp  tierdb_schema.cpp  tierdb_storage.cpp  tierdb_table.cpp  tierdb_transaction.cpp  tierdb_transaction_manager.cpp  tierdb_update.cpp
test/: README.md
test/fixture/: make_iceberg.py  setup.sh
test/sql/: tierdb_direct.test  tierdb_read.test  tierdb_smoke.test  tierdb_txn.test  tierdb_types.test  tierdb_write.test
tierdb-core-ffi/: Cargo.toml
tierdb-core-ffi/src/: abi.rs  catalog.rs  lib.rs  scan.rs  write.rs
