[workspace]

[package]
name = "tierdb-core-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "tierdb_core_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tierdb-core = { git = "https://github.com/Modak-Labs/tierdb.git", tag = "core-v0.1.0" }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
serde_json = "1"
